Fix vercel.json for Python functions runtime

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,10 @@
 {
-  "buildCommand": "pip install -r requirements.txt",
-  "outputDirectory": ".",
+  "functions": {
+    "api/index.py": {
+      "runtime": "@vercel/python@4.0.0"
+    }
+  },
   "rewrites": [
-    { "source": "/(.*)", "destination": "/api" }
+    { "source": "/(.*)", "destination": "/api/index.py" }
   ]
 }
